# rustguard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.anatoly/: calibration.json  deliberation-memory.json  embeddings-ready.json  publish.sh
.anatoly/docs/: index.md
.anatoly/rustguard-anatoly/runs/: latest
.anatoly/tasks/: rustguard-cli-src-main.task.json  rustguard-core-src-lib.task.json  rustguard-core-src-session.task.json  rustguard-core-src-timers.task.json  rustguard-core-tests-integration.task.json  rustguard-crypto-src-blake2s.task.json  rustguard-crypto-src-lib.task.json  rustguard-crypto-src-tai64n.task.json  rustguard-daemon-src-config.task.json  rustguard-daemon-src-lib.task.json  rustguard-enroll-src-client.task.json  rustguard-enroll-src-control.task.json  rustguard-enroll-src-lib.task.json  rustguard-enroll-src-packet.task.json  rustguard-enroll-src-pool.task.json  rustguard-enroll-src-state.task.json  rustguard-kmod-src-cookie.task.json  rustguard-kmod-src-timers.task.json  rustguard-tun-examples-tun_echo.task.json  rustguard-tun-src-bpf_loader.task.json  rustguard-tun-src-lib.task.json  rustguard-tun-src-macos.task.json  rustguard-tun-src-uring.task.json
docs/01-Getting-Started/: 01-Overview.md
docs/03-Guides/: 02-Advanced-Configuration.md  03-Troubleshooting.md
docs/04-API-Reference/: 02-Configuration-Schema.md
docs/05-Development/: 01-Source-Tree.md  03-Code-Conventions.md
rustguard-cli/: Cargo.toml
rustguard-cli/src/: main.rs
rustguard-core/: Cargo.toml
rustguard-core/src/: cookie.rs  handshake.rs  lib.rs  messages.rs  session.rs
rustguard-crypto/: Cargo.toml
rustguard-crypto/src/: aead.rs  blake2s.rs  lib.rs  tai64n.rs  x25519.rs
rustguard-daemon/: Cargo.toml
rustguard-daemon/src/: config.rs  lib.rs  peer.rs  tunnel.rs
rustguard-enroll/src/: lib.rs  pool.rs  server.rs  state.rs
rustguard-kmod/: Kbuild
rustguard-kmod/src/: allowedips.rs  bindings_helper.h  cookie.rs  lib.rs  noise.rs  replay.rs  timers.rs  wg_crypto.c  wg_net.c  wg_queue.c  wg_socket.c
rustguard-tun/: Cargo.toml
rustguard-tun/bpf/: xdp_wg.c
rustguard-tun/examples/: tun_echo.rs
rustguard-tun/src/: bpf_loader.rs  lib.rs  macos.rs  xdp.rs
tests/: peer_a.conf  peer_b.conf
(+658 files in other folders)
