[workspace]
members = [
    "rustguard-crypto",
    "rustguard-core",
    "rustguard-tun",
    "rustguard-daemon",
    "rustguard-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cali/rustguard"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
