[package]
name = "rustguard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RustGuard CLI: wg-quick compatible interface management"

[[bin]]
name = "rustguard"
path = "src/main.rs"

[dependencies]
rustguard-daemon = { path = "../rustguard-daemon" }
rustguard-crypto = { path = "../rustguard-crypto" }
base64 = "0.22"
