[package]
name = "rustguard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WireGuard protocol core: Noise_IK handshake, transport, timers"

[dependencies]
rustguard-crypto = { path = "../rustguard-crypto" }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
