[package]
name = "rustguard-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for RustGuard: X25519, ChaCha20-Poly1305, BLAKE2s, HKDF"

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
